--- a/views/user/stOrderclass.html
+++ b/views/user/stOrderclass.html
@@ -57,8 +57,9 @@
 				</p>
 			</div>
 		</div>
-		<section class="setting">
-			<div class="setting_block"><p class="setting_p">周倩叶</p></div>
+		<section class="coverSetting setting_show" onclick="showThing()" id="coverSetting"></section>
+		<section class="setting setting_show" id="setting">
+			<div class="setting_block"><p class="setting_p" id="getname"></p></div>
 			<div class="setting_underline"></div>
 			<input type="password" class="setting_textfield" placeholder="新密码" id="Up_password">
 			<div class="setting_block" onclick="updatePassword()"><p class="setting_p">更新密码</p></div>
