做完了项目权限bug
做完了项目权限bug，下一步解决待审核和已归档的问题

--- a/views/user/item.html
+++ b/views/user/item.html
@@ -63,7 +63,7 @@
 				<div class="detail_add" onclick="getDoneItem()"><p class="Thedetail_p detailadd_p">归档此项目</p></div> <br>
 				<div class="detail_add" onclick="deleteItem()"><p class="Thedetail_p detailadd_p">删除项目</p></div> <br>
 				<div>
-					<input type="text" class="detail_User" placeholder="用户" id="insertUser"><br><br>
+					<input type="text" class="detail_User setting_textfield" placeholder="用户" id="insertUser"><br><br>
 					<div class="detail_add" onclick="insertUser()"><p class="Thedetail_p detailadd_p">插入</p></div>
 				</div>
 			</div>
