--- a/views/admin/articles.html
+++ b/views/admin/articles.html
@@ -13,8 +13,20 @@
 		<style>html,body {width: 100%; height: 100%;}</style>
 	</head>
 	<body>
-		<header class="Ad_head">
+		<header class="Ad_head" id="head">
 			<button class="btn btn-primary hd_downbtn" onclick="tiggle()">下拉</button>
+			<ul class="nav navbar-nav myloginfo" >
+				<li class="dropdown">
+					<a href="##" class="dropdown-toggle " data-toggle="dropdown" >
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="hrefpointet" onclick="hrefuser()">用户界面</li>
+						<li><hr></li>
+						<li><form action="index.php?r=site/logout" method="post"><input class="mylogoutbtn" type="submit" value="退出"></form></li>
+					</ul>
+				</li>
+			</ul>
 		</header>
 		<div class="col-xs-2 Ad_Lef" id="showandhide">
 			<br>
@@ -95,18 +107,7 @@
 			<!--用于等会ajax传输数据-->
 			<span id="articleid" style="display: none"></span>
 			<section class="Set_xm">
-				<select class="form-control" name="changeart" id="changeart_sel" onclick="clearvalue(this)">
-					<option value="" selected="true" disabled="true">—选择添加数量—</option>
-					<option value="1">1</option>
-					<option value="5">5</option>
-					<option value="15">15</option>
-					<option value="20">20</option>
-					<option value="30">30</option>
-					<option value="50">50</option>
-					<option value="100">100</option>
-				</select>
-				<p class="set_de" >或手动输入添加数量</p>
-				</div><input class="form-control" type="number" placeholder="手动输入数量" id="changeart_inp" onclick="clearvalue(this)">
+				</div><input class="form-control" type="number" placeholder="手动输入数量" id="changeart_inp">
 			</section>
 			<p id="changeResult" class="Set_btn_P"></p><br>
 			<div class="Set_btn_M mysetforbtn_art">
@@ -125,18 +126,7 @@
 			<!--用于等会ajax传输数据-->
 			<span id="articleid_2" style="display: none"></span>
 			<section class="Set_xm">
-				<select class="form-control" name="changeart" id="changeart_sel_2" onclick="clearvalue_2(this)">
-					<option value="" selected="true" disabled="true">—选择减少数量—</option>
-					<option value="1">1</option>
-					<option value="5">5</option>
-					<option value="15">15</option>
-					<option value="20">20</option>
-					<option value="30">30</option>
-					<option value="50">50</option>
-					<option value="100">100</option>
-				</select>
-				<p class="set_de" >或手动输入减少数量</p>
-				</div><input class="form-control" type="number" placeholder="手动输入数量" id="changeart_inp_2" onclick="clearvalue_2(this)">
+				</div><input class="form-control" type="number" placeholder="手动输入数量" id="changeart_inp_2">
 			</section>
 			<p id="changeResult_2" class="Set_btn_P"></p><br>
 			<div class="Set_btn_M mysetforbtn_art">
@@ -171,6 +161,7 @@
         <script src="js/adminHref.js"></script>
 		<script src="js/adminArticle.js"></script>
 		<script src="js/jquery.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script>
 			$(function(){
 				getRawArticleData();
