--- a/views/admin/itemshow.html
+++ b/views/admin/itemshow.html
@@ -9,13 +9,26 @@
 		<link rel="stylesheet" href="css/admin/adminMain.css">
 		<link rel="stylesheet" href="css/admin/adminUser.css">
 		<link rel="stylesheet" href="css/admin/adminArticle.css">
+		<link rel="stylesheet" href="css/admin/adminItem.css">
 		<link rel="stylesheet" href="css/Main.css">
 		<title>管理员</title>
 		<style>html,body {width: 100%; height: 100%;}</style>
 	</head>
 	<body onload="selectAllItem()">
-		<header class="Ad_head">
+		<header class="Ad_head" id="head">
 			<button class="btn btn-primary hd_downbtn" onclick="tiggle()">下拉</button>
+			<ul class="nav navbar-nav myloginfo" >
+				<li class="dropdown">
+					<a href="##" class="dropdown-toggle " data-toggle="dropdown" >
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="hrefpointet" onclick="hrefuser()">用户界面</li>
+						<li><hr></li>
+						<li><form action="index.php?r=site/logout" method="post"><input class="mylogoutbtn" type="submit" value="退出"></form></li>
+					</ul>
+				</li>
+			</ul>
 		</header>
 		<div class="col-xs-2 Ad_Lef" id="showandhide">
 			<br>
@@ -67,17 +80,26 @@
 				</div>
 			</div>
 		</section>
-		<section class="detail_model" id="detail_model">
-	<!-- 		<span onclick="closeModel()" class="glyphicon glyphicon-remove delete_span"></span>
-			<div class="" id="detailmodel_Main">
-				<textarea name="" id="" cols="30" rows="3" class="detail_Maintext"></textarea>
-				<button class="detailmodel_btn" id="" onclick="addInTodo()">添加入今日任务</button>
-				<button class="detailmodel_btn" id="">修改</button>
-			</div> -->
+		<!--项目详情，默认隐藏-->
+		<section class="cover" id="coverDiv_item_1" onclick="hideAll_item_1()"></section>
+		<section class="showSetting" id="SetDiv_item_1">
+			<div class="Set_pic itembk">
+				<p class="Set_tit">项目详情</p>
+			</div>
+			<span id="itemid" style="display: none"></span>
+			<section class="Set_xm">
+				<h1 id="item_name_1" style="text-align: center"></h1>
+				<h4 id="item_date_1" style="text-align: center"></h4><br><br>
+				<p name="" id="item_content_1"></p>
+			</section>
+			<div class="Set_btn_M mysetforbtn_item">
+				<button class="Set_btn col-xs-12" onclick="hideAll_item_1()">取消</button>
+			</div>
 		</section>
-        <script src="js/jquery.min.js"></script>
+		<script src="js/jquery.min.js"></script>
         <script src="js/adminHref.js"></script>
         <script src="js/adminItem.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script>
 			var show = 0;
 			function tiggle() {
@@ -89,9 +111,7 @@
 					this.show = 0;
 				}
 			}
-			function closeModel() {
-				document.getElementById('detail_model').style.left = '-100%';
-			}
+
 		</script>
 	</body>
 </html>
