--- a/views/admin/momentsmene.html
+++ b/views/admin/momentsmene.html
@@ -14,8 +14,20 @@
 		<style>html,body {width: 100%; height: 100%;}</style>
 	</head>
 	<body>
-		<header class="Ad_head">
+		<header class="Ad_head" id="head">
 			<button class="btn btn-primary hd_downbtn" onclick="tiggle()">下拉</button>
+			<ul class="nav navbar-nav myloginfo" >
+				<li class="dropdown">
+					<a href="##" class="dropdown-toggle " data-toggle="dropdown" >
+						<span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li class="hrefpointet" onclick="hrefuser()">用户界面</li>
+						<li><hr></li>
+						<li><form action="index.php?r=site/logout" method="post"><input class="mylogoutbtn" type="submit" value="退出"></form></li>
+					</ul>
+				</li>
+			</ul>
 		</header>
 		<div class="col-xs-2 Ad_Lef" id="showandhide">
 			<br>
@@ -125,6 +137,7 @@
         <script src="js/adminMoments.js"></script>
         <script src="js/jquery.min.js"></script>
         <script src="js/main.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script>
 			var show = 0;
 			var nowPage = 1;
