--- a/views/user/homepage.html
+++ b/views/user/homepage.html
@@ -66,6 +66,8 @@
 	<section class="setting">
 		<div class="setting_block"><p class="setting_p">周倩叶</p></div>
 		<div class="setting_underline"></div>
+		<div class="setting_block" ><p class="setting_p" onclick="hrefadmin()">管理员界面</p></div>
+		<div class="setting_underline"></div>
 		<input type="password" class="setting_textfield" placeholder="新密码" id="Up_password">
 		<div class="setting_block" onclick="updatePassword()"><p class="setting_p">更新密码</p></div>
 		<div class="setting_underline"></div>
