--- a/web/css/login/login.css
+++ b/web/css/login/login.css
@@ -74,3 +74,18 @@ input::-moz-placeholder, textarea::-moz-placeholder {
 input:-ms-input-placeholder, textarea:-ms-input-placeholder { 
 	color: #FFF; 
 } 
+.help-block-error{
+	text-align: center!important;
+}
+@media screen and (min-width: 1200px) {
+    body {	
+    		width: 100%;
+			height:100%;
+			background-image: url(images/sues1.png);
+			background-size: 100%;
+			background-position: 50% 50%;
+			overflow: hidden;
+			background-repeat: no-repeat;
+        
+    }
+}
