项目成员选择使用下拉框，多处bug修复，一级管理员权限已完成

--- a/views/user/stOrderclass.html
+++ b/views/user/stOrderclass.html
@@ -10,7 +10,9 @@
 		<link rel="stylesheet" href="css/user/userOrder.css">
 		<link rel="stylesheet" href="css/teambition.css">
 		<title>工程大易班</title>
-		<style>html,body{height:100%;overflow: hidden;}</style>
+		<style>
+			html,body{height:100%;overflow: hidden;}
+		</style>
 	</head>
 	<body>
 		<header>
@@ -39,7 +41,7 @@
 					<option value="6">周六</option>
 					<option value="7">周日</option>
 				</select>
-				<a onclick="searchOrder()">搜索</a>
+				<a onclick="searchOrder()" style="cursor: pointer">搜索</a>
 			</div>
 		</section>
 		<div class="ordertable" id="ordertable">
