课表已从学校更新，故更新课表逻辑恢复正常

--- a/views/admin/emptyclassshow.html
+++ b/views/admin/emptyclassshow.html
@@ -110,7 +110,7 @@
 							<!--<option value="1">全部</option>-->
 						<!--</select>-->
 						<input type="button" class="btn btn-small btn-primary" onclick="searchEmptyclass()" value="搜索">
-						<a class="btn btn-danger btn-sm" onclick="updateMemberkb()">更新部员课表(测试方便，第一学期六月份结束)</a>
+						<a class="btn btn-danger btn-sm" onclick="updateMemberkb()">更新部员课表</a>
 				</span><hr class="hranpai"><br>
 				<div class="Ad_User_Main">
 					<table id="emptyclassdata" class="table table-condensed table-hover">
