完成了火狐、ie的兼容性；简单弄了index选择页

--- a/web/css/admin/adminArticle.css
+++ b/web/css/admin/adminArticle.css
@@ -25,6 +25,8 @@
     background-color: #ffffff;
     z-index: 100;
     -webkit-transition:all .4s ease-in-out;
+    -moz-transition:all .4s ease-in-out;
+    -ms-transition:all .4s ease-in-out;
 }
 .showSetting_3{
     overflow: hidden;
@@ -39,7 +41,11 @@
     left: 50%;
     top: -600px;
     -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     -webkit-transition:all .4s ease-in-out;
+    -moz-transition:all .4s ease-in-out;
+    -ms-transition:all .4s ease-in-out;
 }
 .Set_tit_3{
     position: relative;
@@ -49,6 +55,8 @@
     text-shadow: 5px 5px 5px #000;
     top: 13px;
     -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
 }
 .showSetting_3 span{
     margin-left: 20px;
