--- a/web/css/Main.css
+++ b/web/css/Main.css
@@ -7,6 +7,8 @@
 	height: 150px;
 	border-radius: 10px;
 	-webkit-transition:all .2s ease-in-out;
+	-moz-transition:all .2s ease-in-out;
+	-ms-transition:all .2s ease-in-out;
 	overflow: hidden;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
@@ -16,6 +18,8 @@
 .item_show:hover {
 	box-shadow: 0px 7px 10px #CCC;
 	-webkit-transform: translateY(-10px);
+	-moz-transform: translateY(-10px);
+	-ms-transform: translateY(-10px);
 }
 
 .item_showtit {
@@ -30,16 +34,24 @@
 	width: 70px;
 	height: 70px;
 	-webkit-transition:all .2s ease-in-out;
+	-moz-transition:all .2s ease-in-out;
+	-ms-transition:all .2s ease-in-out;
 	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
 }
 .item_Addicon:hover {
 	-webkit-transform:rotate(-90deg) translateY(-50%);
+	-moz-transform:rotate(-90deg) translateY(-50%);
+	-ms-transform:rotate(-90deg) translateY(-50%);
 }
 
 .item_p {
 	top: 60%;
 	left: 50%;
 	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
 }
 
 .enjoy-css {
@@ -48,10 +60,13 @@
 	display: inline-block;
 	-webkit-box-sizing: content-box;
 	-moz-box-sizing: content-box;
+	-ms-box-sizing: content-box;
 	box-sizing: content-box;
 	padding: 6px 20px;
 	border: none;
 	-webkit-border-radius: 32px / 54px;
+	-moz-border-radius: 32px / 54px;
+	-ms-border-radius: 32px / 54px;
 	border-radius: 32px / 54px;
 	font: normal 18px/normal "Coda", Helvetica, sans-serif;
 	color: rgba(0,142,198,1);
@@ -59,9 +74,12 @@
 	text-overflow: ellipsis;
 	background: rgba(252,252,252,1);
 	-webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) inset;
+	-moz-box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) inset;
+	-ms-box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) inset;
 	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.2) inset;
 	text-shadow: 1px 1px 0 rgba(255,255,255,0.66) ;
 	-webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+	-ms-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
 	-moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
 	-o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
 	transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
@@ -70,6 +88,8 @@
 .enjoy-css:hover {
 	background: rgba(232,249,255,1);
 	-webkit-box-shadow: 0 2px 2px 0 rgba(90,90,90,0.2) inset;
+	-moz-box-shadow: 0 2px 2px 0 rgba(90,90,90,0.2) inset;
+	-ms-box-shadow: 0 2px 2px 0 rgba(90,90,90,0.2) inset;
 	box-shadow: 0 2px 2px 0 rgba(90,90,90,0.2) inset;
 }
 
