--- a/web/css/admin/adminEmptyclass.css
+++ b/web/css/admin/adminEmptyclass.css
@@ -41,26 +41,36 @@
   display: inline-block;
    
   -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+  -moz-animation: stretchdelay 1.2s infinite ease-in-out;
+  -ms-animation: stretchdelay 1.2s infinite ease-in-out;
   animation: stretchdelay 1.2s infinite ease-in-out;
 }
  
 .spinner .rect2 {
   -webkit-animation-delay: -1.1s;
+  -moz-animation-delay: -1.1s;
+  -ms-animation-delay: -1.1s;
   animation-delay: -1.1s;
 }
  
 .spinner .rect3 {
   -webkit-animation-delay: -1.0s;
+  -moz-animation-delay: -1.0s;
+  -ms-animation-delay: -1.0s;
   animation-delay: -1.0s;
 }
  
 .spinner .rect4 {
   -webkit-animation-delay: -0.9s;
+  -moz-animation-delay: -0.9s;
+  -ms-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
  
 .spinner .rect5 {
   -webkit-animation-delay: -0.8s;
+  -moz-animation-delay: -0.8s;
+  -ms-animation-delay: -0.8s;
   animation-delay: -0.8s;
 }
  
