--- a/web/css/admin/adminUser.css
+++ b/web/css/admin/adminUser.css
@@ -15,6 +15,8 @@
 	background-color: #ffffff;
 	z-index: 100;
 	-webkit-transition:all .4s ease-in-out;
+	-moz-transition:all .4s ease-in-out;
+	-ms-transition:all .4s ease-in-out;
 }
 .showSetting_user_2{
 	overflow: hidden;
@@ -29,7 +31,11 @@
 	left: 50%;
 	top: -600px;
 	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
 	-webkit-transition:all .4s ease-in-out;
+	-moz-transition:all .4s ease-in-out;
+	-ms-transition:all .4s ease-in-out;
 }
 .showSetting_user_2 span{
 	margin-left: 20px;
@@ -43,6 +49,8 @@
 	text-shadow: 5px 5px 5px #000;
 	top: 13px;
 	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 }
 .mysetforbtn_user{
     position: absolute;
