--- a/web/css/login/login.css
+++ b/web/css/login/login.css
@@ -3,7 +3,11 @@
 	top: 50%;
 	left: -50%;
 	-webkit-transform: translateX(-50%) translateY(-60%);
+	-moz-transform: translateX(-50%) translateY(-60%);
+	-ms-transform: translateX(-50%) translateY(-60%);
 	-webkit-transition:all 1s ease-in-out;
+	-moz-transition:all 1s ease-in-out;
+	-ms-transition:all 1s ease-in-out;
 }
 .login_h3 {
 	text-align: center;
@@ -21,6 +25,10 @@
 	color: rgba(256,256,256,1) !important;
 	border-radius: 22.5px;
 	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+
+
 }
 .ipt:focus {
 	outline:none;
