--- a/web/css/teambition.css
+++ b/web/css/teambition.css
@@ -35,6 +35,8 @@ nav ,.sec_nav{
 	top: 50%;
 	left: 50%;
 	-webkit-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
 }
 
 .nav_sec1 {
@@ -43,6 +45,8 @@ nav ,.sec_nav{
 	top: 15px;
 	left: 50%;
 	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
 	height: 30px;
 }
 
@@ -52,6 +56,8 @@ nav ,.sec_nav{
 	text-decoration:none;
 	margin: 15px;
 	-webkit-transition: color .2s;
+	-moz-transition: color .2s;
+	-ms-transition: color .2s;
 }
 .nav_btn:hover {
 	color: #F66;
@@ -75,10 +81,14 @@ nav ,.sec_nav{
 	position: relative;
 	top: 50%;
 	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 }
 #sec_xm {
 	position: relative !important;
 	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	top: 50%;
 }
 .mask_main {
@@ -106,6 +116,8 @@ nav ,.sec_nav{
 	border-left: 14px solid #F00;
 	margin-bottom: 10px;
 	-webkit-transition:all .2s ease-in-out;
+	-moz-transition:all .2s ease-in-out;
+	-ms-transition:all .2s ease-in-out;
 }
 .mask_tip:hover {
 	border-left: 14px solid #EEE;
@@ -115,6 +127,8 @@ nav ,.sec_nav{
 	position: relative;
 	top: 50%;
 	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	font-size: 2em;
 }
 
@@ -128,6 +142,8 @@ nav ,.sec_nav{
 	background-color: #333;
 	z-index: 100;
 	-webkit-transition:all .4s ease-in-out;
+	-moz-transition:all .4s ease-in-out;
+	-ms-transition:all .4s ease-in-out;
 }
 
 .showSetting {
@@ -142,7 +158,11 @@ nav ,.sec_nav{
 	left: 50%;
 	top: -600px;
 	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
 	-webkit-transition:all .7s ease-in-out;
+	-moz-transition:all .7s ease-in-out;
+	-ms-transition:all .7s ease-in-out;
 }
 .Set_pic {
 	position: relative;
@@ -159,6 +179,8 @@ nav ,.sec_nav{
 	text-shadow: 5px 5px 5px #000;
 	top: 50%;
 	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 }
 .Set_btn_M {
 	width: 100%;
@@ -175,6 +197,8 @@ nav ,.sec_nav{
 	width: 50%;
 	height: 40px;
 	-webkit-transition:all .2s ease-in-out;
+	-moz-transition:all .2s ease-in-out;
+	-ms-transition:all .2s ease-in-out;
 }
 .handlegreen {
 	background-color: #096 !important;
@@ -195,6 +219,8 @@ nav ,.sec_nav{
 	height: 92%;
 	background-color: rgba(120,120,120,0.5);
 	-webkit-transition:all 0.7s ease-in-out;
+	-moz-transition:all 0.7s ease-in-out;
+	-ms-transition:all 0.7s ease-in-out;
 }
 .det_block {
 	border-radius: 7px;
@@ -210,6 +236,8 @@ nav ,.sec_nav{
 	right: 2%;
 	float: right;
 	-webkit-transition:all .2s ease-in-out;
+	-moz-transition:all .2s ease-in-out;
+	-ms-transition:all .2s ease-in-out;
 }
 .delete_span:hover {
 	color: #C66;
@@ -228,6 +256,8 @@ nav ,.sec_nav{
 	width: 100%;
 	height: 50px;
 	-webkit-transition:all .2s ease-in-out;
+	-moz-transition:all .2s ease-in-out;
+	-ms-transition:all .2s ease-in-out;
 }
 .Thedetail:hover {
 	background-color: #EEE;
@@ -238,12 +268,16 @@ nav ,.sec_nav{
 	font-size: 1.4em;
 	top: 50%;
 	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 }
 .detail_add {
 	height: 45px;
 	cursor: pointer;
 	background-color: #EEE;
 	-webkit-transition:all .2s ease-in-out;
+	-moz-transition:all .2s ease-in-out;
+	-ms-transition:all .2s ease-in-out;
 }
 .detail_add:hover {
 	background-color: #ABCDEF;
@@ -264,7 +298,11 @@ nav ,.sec_nav{
 	height: 500px;
 	background-color: #EEE;
 	-webkit-transition:all .7s ease-in-out;
+	-moz-transition:all .7s ease-in-out;
+	-ms-transition:all .7s ease-in-out;
 	-webkit-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
 }
 .detail_Maintext {
 	position: relative;
@@ -274,6 +312,8 @@ nav ,.sec_nav{
 	border: 0px;
 	width: 80%;
 	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
 }
 .detailmodel_btn {
 	margin: 10px 0px;
@@ -286,7 +326,11 @@ nav ,.sec_nav{
 	height: 45px;
 	left: 50%;
 	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
 	-webkit-transition:all .2s ease-in-out;
+	-moz-transition:all .2s ease-in-out;
+	-ms-transition:all .2s ease-in-out;
 }
 .detailmodel_btn:hover {
 	background-color: #AAA;
@@ -296,6 +340,8 @@ nav ,.sec_nav{
 	width: 100%;
 	height: 45px !important;
 	-webkit-transition:all .2s ease-in-out;	
+	-moz-transition:all .2s ease-in-out;	
+	-ms-transition:all .2s ease-in-out;	
 }
 
 .setting {
@@ -310,12 +356,18 @@ nav ,.sec_nav{
 	background-color: #FFF;
 	overflow: hidden;
 	-webkit-transition:all .2s ease-in-out;
+	-moz-transition:all .2s ease-in-out;
+	-ms-transition:all .2s ease-in-out;
 }
 .setting_show {
 	-webkit-transform: scale(0);
+	-moz-transform: scale(0);
+	-ms-transform: scale(0);
 }
 .setting_hide {
 	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
 }
 .setting_block {
 	cursor: pointer;
@@ -323,6 +375,8 @@ nav ,.sec_nav{
 	height: 30px;
 	width: 100%;
 	-webkit-transition:all .2s ease-in-out;
+	-moz-transition:all .2s ease-in-out;
+	-ms-transition:all .2s ease-in-out;
 }
 .setting_block:hover {
 	background-color: #EEE;
@@ -332,6 +386,8 @@ nav ,.sec_nav{
  	top: 50%;
 	font-size: 1.1em;
 	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
 	padding: 0px 15px;
 
  }
@@ -353,6 +409,8 @@ nav ,.sec_nav{
 	outline: none;
 	border: 0px;
 	-webkit-transition:all .5s ease-in-out;
+	-moz-transition:all .5s ease-in-out;
+	-ms-transition:all .5s ease-in-out;
 }
 .setting_textfield:hover, .setting_textfield:focus{
 	background-color: #EEE;
