--- a/views/user/item.html
+++ b/views/user/item.html
@@ -104,7 +104,7 @@
 			<input type="submit" class="setting_block setting_logout" value="退出">
 		</form>
 	</section>
-	<script src="js/userHref.js"></script>
+	<!-- <script src="js/userHref.js"></script> -->
 	<script src="js/userItem.js"></script>
 	<script src="js/jquery.min.js"></script>
 	<script>
