修改了库存记录样式

--- a/views/admin/articles.html
+++ b/views/admin/articles.html
@@ -56,7 +56,7 @@
 		</div>
 		<div class="col-xs-10 Ad_Rig">
 			<h2>库存管理</h2><br>
-			<div class="Ad_RShow"><br>
+			<div class="Ad_RShow" style="overflow:auto"><br>
 				<span class="Ad_btns">
 					<a class="nav_btn" onclick="getRawArticleData(4)">所有库存</a>
 					<a class="nav_btn" onclick="addArticle()">物品添加</a>
